[package]
name = "spl-token-auto-purchase"
version = "0.1.0"
edition = "2021"
description = "Automatic SPL token buyer smart contract for Solana"
license = "MIT"
repository = "https://github.com/your-username/solana-auto-token-buyer"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []

[dependencies]
pinocchio = "0.4"
pinocchio-token = "0.2"
borsh = { version = "1.5", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
